<resources>
    <string name="app_name">AyoEats</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Hello</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Menu Strings -->
    <string name="menu_home">Meal Locations </string>
    <string name="menu_meal_location">Add a Meal Location</string>
    <string name="menu_slideshow">About Us</string>
    <!--    Meal Location Strings -->
    <string name="button_add_MealLocation"> Add Meal Location</string>
    <string name="hint_mealName">Meal Name</string>
    <string name="hint_mealDescription">Meal Description</string>
    <string name="hint_mealPrice">Meal Price</string>
    <string name="hint_mealRating">Rate the Meal out of 5</string>
    <string name="textview_rate_label">Current Rating</string>
    <string name="textview_rating_progress">0 Stars</string>
    <string name="enter_mealLocation_mealName">Please Enter a Meal Name</string>
    <string name="save_meal_location">Save Meal Location</string>
    <string name="meal_location_add_successful">Your Meal Location has been successfully added</string>
    <string name="button_addImage">Add Meal Image </string>
    <string name="select_meal_image">Select Meal Image</string>

    <!-- Meal Location List -->
    <string name="mealLocationsNotFound">No meal locations Yet…\nGo and add a Meal!</string>
    <string name="change_mealLocation_image"> Change Meal Image</string>

    <!--    Meal Location Details -->
    <string name="mealLocationDetails">Meal Location Details </string>
    <string name="mealName">Meal Name</string>
    <string name="mealDescription">Meal Description</string>
    <string name="mealPrice">Meal Price</string>
    <string name="mealRating">Meal Rating</string>
    <string name="mealAddress">Meal Address</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!--    Meal Location Loading -->
    <string name="messageLoading">Please Wait while the Meal Locations are Loading...</string>

<!--    Firebase Auth -->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <!--    Images -->
    <string name="select_profile_image">Select Profile Image</string>

    <!--    Maps-->
    <string name="action_location">Locations</string>

    <!--    About Us -->
    <string name="blurb_about_us">This is a 2nd Year Mobile App Development Assignment by Ayodele Onamusi.\n\n The app allows a user to create a diary of sorts of meals they have eaten at different restaurants as well as rate them. </string>
</resources>