<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragmentMealLocationLists"
            android:icon="@drawable/ic_menu_meal_locations"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/mealLocationFragment"
            android:icon="@drawable/ic_menu_add_meal_location"
            android:title="@string/menu_meal_location" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_menu_location"
            android:title="@string/action_location" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_about_us"
            android:title="@string/menu_slideshow" />
        <item android:title="Access Control">
            <menu>
                <item
                    android:id="@+id/nav_sign_out"
                    android:icon="@android:drawable/ic_menu_revert"
                    android:onClick="signOut"
                    android:title="@string/sign_out" />
            </menu>
        </item>
    </group>
</menu>