<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/fragmentMealLocationLists">

    <fragment
        android:id="@+id/fragmentMealLocationLists"
        android:name="ie.setu.ayoeats.ui.mealLocationsList.MealLocationsListFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_meal_locations_list" >
        <action
            android:id="@+id/action_nav_home_to_mealLocationDetailFragment"
            app:destination="@id/mealLocationDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_nav_home_to_nav_meal_location"
            app:destination="@id/mealLocationFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/mealLocationFragment"
        android:name="ie.setu.ayoeats.ui.mealLocation.MealLocationFragment"
        android:label="@string/menu_meal_location"
        tools:layout="@layout/fragment_meal_location" >
        <action
            android:id="@+id/action_nav_meal_location_to_nav_home"
            app:destination="@id/fragmentMealLocationLists"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ie.setu.ayoeats.ui.aboutUs.AboutUsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_about_us" />
    <fragment
        android:id="@+id/mealLocationDetailFragment"
        android:name="ie.setu.ayoeats.ui.detail.MealLocationDetailFragment"
        android:label="Meal Location Details"
        tools:layout="@layout/fragment_meal_location_detail" >
        <action
            android:id="@+id/action_mealLocationDetailFragment_to_nav_home"
            app:destination="@id/fragmentMealLocationLists"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <argument
            android:name="mealLocationuid"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/mapsFragment"
        android:name="ie.setu.ayoeats.ui.map.MapsFragment"
        android:label="Meal Location Map"
        tools:layout="@layout/fragment_maps" >
        <action
            android:id="@+id/action_mapsFragment_to_mealLocationDetailFragment"
            app:destination="@id/mealLocationDetailFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
</navigation>